ProdIND/ProdPrograms/force-app/main/default/objects/Lien_Detail__c/Lien_Detail__c.object-meta.xml
<CustomObject>
    <label>Lien Detail</label>
    <nameField>
        <label>Lien Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lien Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>