ProdIND/ProdPrograms/force-app/main/default/objects/Lien_Detail__c/fields/Deal_No__c.field-meta.xml
<CustomField>
    <fullName>Deal_No__c</fullName>
    <label>Deal No</label>
    <referenceTo>Exposure__c</referenceTo>
    <relationshipName>Lien_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>