ProdIND/ProdPrograms/force-app/main/default/objects/Lien_Detail__c/fields/Lien_Maker_Date__c.field-meta.xml
<CustomField>
    <fullName>Lien_Maker_Date__c</fullName>
    <label>Lien Maker Date</label>
    <type>Date</type>
</CustomField>