ProdIND/ProdPrograms/force-app/main/default/objects/Lien_Detail__c/fields/Lien_Marking_Period__c.field-meta.xml
<CustomField>
    <fullName>Lien_Marking_Period__c</fullName>
    <label>Lien Marking Period</label>
    <type>Date</type>
</CustomField>