ProdIND/ProdPrograms/force-app/main/default/objects/Lien_Detail__c/fields/Lien_Marking_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lien_Marking_Reason__c</fullName>
    <label>Lien Marking Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>