ProdIND/ProdPrograms/force-app/main/default/objects/Lien_Detail__c/fields/Lien_Request_By__c.field-meta.xml
<CustomField>
    <fullName>Lien_Request_By__c</fullName>
    <label>Lien Request By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>