ProdIND/ProdPrograms/force-app/main/default/objects/Lien_Detail__c/fields/Lien_Type__c.field-meta.xml
<CustomField>
    <fullName>Lien_Type__c</fullName>
    <label>Lien Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>