ProdIND/ProdPrograms/force-app/main/default/objects/Lien_Detail__c/fields/Source_Deal_No__c.field-meta.xml
<CustomField>
    <fullName>Source_Deal_No__c</fullName>
    <label>Source Deal No</label>
    <length>12</length>
    <type>Text</type>
</CustomField>