ProdIND/ProdPrograms/force-app/main/default/objects/Lien_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Deal_No__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>